# rust-persistent-kv

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: config.rs  lib.rs  main.rs  snapshot_set.rs  snapshots.rs  store.rs  types.rs
src/snapshot/: mod.rs  reader.rs  writer.rs
src/snapshot_set/: admin.rs  file_snapshot_set.rs  mod.rs
