[package]
name = "persistent-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
regex = "1.1"
clap = "2.33.3"

[dev-dependencies]
tempfile = "3.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "persistent-kv-cli"
path = "./src/main.rs"

[[bench]]
name = "benchmark"
harness = false
