[package]
name = "persistent-kv"
version = "0.1.0"
edition = "2021"
authors = ["Alex Gessler <alexander.gessler@gmx.net>"]
homepage = "https://github.com/acgessler/rust-persistent-kv"
repository = "https://github.com/acgessler/rust-persistent-kv.git"
keywords = ["databases", "key-value store", "persistent", "collection"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"

[dependencies]
prost = "0.13"
regex = "1.1"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "persistent-kv-cli"
path = "./src/main.rs"

[[bench]]
name = "benchmark"
harness = false
