[package]
name = "persistent-kv"
version = "1.0.2"
edition = "2021"
description = "Persistent key-value store"
authors = ["Alexander Gessler <alexander.gessler@gmx.net>"]
homepage = "https://github.com/acgessler/rust-persistent-kv"
repository = "https://github.com/acgessler/rust-persistent-kv.git"
keywords = ["database", "key-value", "persistent", "collection", "concurrency"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [".*/", ".*"]

[dependencies]
prost = "0.13"
fs2 = "0.4.3"

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std"]

[dev-dependencies]
tempfile = "3.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "persistent-kv-cli"
path = "./src/main.rs"

[[bench]]
name = "benchmark"
harness = false
